修改图像路径

--- a/2.3.1矩阵计算.md
+++ b/2.3.1矩阵计算.md
@@ -1,4 +1,5 @@
-![image-Snipaste_2024-01-14_09-59-32.png](./assets/Snipaste_2024-01-14_09-59-32.png)
-![image-Snipaste_2024-01-14_10-04-20.png](./assets/Snipaste_2024-01-14_10-04-20.png)
-![image-Snipaste_2024-01-14_10-16-33.png](./assets/Snipaste_2024-01-14_10-16-33.png)
+![image-Snipaste_2024-01-14_09-59-32.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_09-59-32.png)
+![image-Snipaste_2024-01-14_10-04-20.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-04-20.png)
+
+![image-Snipaste_2024-01-14_10-16-33.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-16-33.png)
 
