--- a/2.3.2自动求导.md
+++ b/2.3.2自动求导.md
@@ -1,10 +1,10 @@
-![image-Snipaste_2024-01-14_10-22-44.png](./assets/Snipaste_2024-01-14_10-22-44.png)
-![image-Snipaste_2024-01-14_10-34-00.png](./assets/Snipaste_2024-01-14_10-34-00.png)
-![image-Snipaste_2024-01-14_10-34-29.png](./assets/Snipaste_2024-01-14_10-34-29.png)
+![image-Snipaste_2024-01-14_10-22-44.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-22-44.png)
+![image-Snipaste_2024-01-14_10-34-00.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-34-00.png)
+![image-Snipaste_2024-01-14_10-34-29.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-34-29.png)
 ![image-Snipaste_2024-01-14_10-35-30.png](./aseets/Snipaste_2024-01-14_10-35-30.png)
-![image-Snipaste_2024-01-14_10-38-14.png](./assets/Snipaste_2024-01-14_10-38-14.png)
-![image-Snipaste_2024-01-14_10-38-51.png](./assets/Snipaste_2024-01-14_10-38-51.png)
-![image-Snipaste_2024-01-14_10-40-09.png](./assets/Snipaste_2024-01-14_10-40-09.png)
+![image-Snipaste_2024-01-14_10-38-14.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-38-14.png)
+![image-Snipaste_2024-01-14_10-38-51.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-38-51.png)
+![image-Snipaste_2024-01-14_10-40-09.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_10-40-09.png)
 
 ## 自动求导
 假设我们想对函数y=(2x^T)x 关于列向量x求导
@@ -76,7 +76,7 @@ x.grad==4*x
 
 
 **现在让我们计算x的另一个函数**
- 
+
 
 
 ```python
@@ -176,7 +176,7 @@ a.grad
 ```
 
     tensor(-0.7648, requires_grad=True)
-    
+
 
 
 
