--- a/2.3.3 线性回归.md
+++ b/2.3.3 线性回归.md
@@ -1,17 +1,17 @@
-![image-Snipaste_2024-01-14_16-14-24.png](./assets/Snipaste_2024-01-14_16-14-24.png)
-![image-Snipaste_2024-01-14_16-15-47.png](./assets/Snipaste_2024-01-14_16-15-47.png)
-![image-Snipaste_2024-01-14_16-16-46.png](./assets/Snipaste_2024-01-14_16-16-46.png)
-![image-Snipaste_2024-01-14_16-18-59.png](./assets/Snipaste_2024-01-14_16-18-59.png)
-![image-Snipaste_2024-01-14_16-20-04.png](./assets/Snipaste_2024-01-14_16-20-04.png)
-![image-Snipaste_2024-01-14_16-21-21.png](./assets/Snipaste_2024-01-14_16-21-21.png)
-![image-Snipaste_2024-01-14_16-22-39.png](./assets/Snipaste_2024-01-14_16-22-39.png)
-![image-Snipaste_2024-01-14_16-24-03.png](./assets/Snipaste_2024-01-14_16-24-03.png)
+![image-Snipaste_2024-01-14_16-14-24.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-14-24.png)
+![image-Snipaste_2024-01-14_16-15-47.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-15-47.png)
+![image-Snipaste_2024-01-14_16-16-46.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-16-46.png)
+![image-Snipaste_2024-01-14_16-18-59.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-18-59.png)
+![image-Snipaste_2024-01-14_16-20-04.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-20-04.png)
+![image-Snipaste_2024-01-14_16-21-21.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-21-21.png)
+![image-Snipaste_2024-01-14_16-22-39.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-22-39.png)
+![image-Snipaste_2024-01-14_16-24-03.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-24-03.png)
 
 ## 基础优化方法
-![image-Snipaste_2024-01-14_16-25-13.png](./assets/Snipaste_2024-01-14_16-25-13.png)
-![image-Snipaste_2024-01-14_16-29-27.png](./assets/Snipaste_2024-01-14_16-29-27.png)
-![image_Snipaste_2024-01-14_16-31-01.png](./assets/Snipaste_2024-01-14_16-31-01.png)
-![image-Snipaste_2024-01-14_16-32-53.png](./assets/Snipaste_2024-01-14_16-32-53.png)
+![image-Snipaste_2024-01-14_16-25-13.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-25-13.png)
+![image-Snipaste_2024-01-14_16-29-27.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-29-27.png)
+![image_Snipaste_2024-01-14_16-31-01.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-31-01.png)
+![image-Snipaste_2024-01-14_16-32-53.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-14_16-32-53.png)
 
 ## 线性回归的从零开始实现
 我们将从零开始实现整个方法，包括数据流水线，模型，损失函数和小批量随机梯度下降优化器
