--- a/2.3线性代数.md
+++ b/2.3线性代数.md
@@ -1,6 +1,6 @@
 ## 2.3. 线性代数
 ### 2.3.1. 标量
-![image_122](./assets/Snipaste_2023-12-04_16-22-26.png)
+![image_122](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_16-22-26.png)
 
 
 ```python
@@ -39,7 +39,7 @@ print(x)
 我们可以使用下标来引用向量的任一元素，例如可以通过x(i)来引用第i个元素。 注意x(i)元素
 是一个标量，所以我们在引用它时不会加粗。 大量文献认为列向量是向量的默认方向，在本书中也是如此。 在数学中，向量
 x可以写为：
-![iamge-13465465](./assets/Snipaste_2023-12-04_16-37-42.png)
+![iamge-13465465](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_16-37-42.png)
 其中x(1)....x(n)是向量的元素。在代码中，我们通过张量的索引来访问任一元素。
 
 
@@ -51,7 +51,7 @@ print(x[3])
 
 
 ### 2.3.2.1 长度,维度和形状
-![image245adsd](./assets/Snipaste_2023-12-04_16-38-31.png)
+![image245adsd](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_16-38-31.png)
 当用张量表示一个向量（只有一个轴）时，我们也可以通过.shape属性访问向量的长度。 形状（shape）是一个元素组，列出了张量沿每个轴的长度（维数）。 对于只有一个轴的张量，形状只有一个元素。
 请注意，维度（dimension）这个词在不同上下文时往往会有不同的含义，这经常会使人感到困惑。 为了清楚起见，我们在此明确一下： 向量或轴的维度被用来表示向量或轴的长度，即向量或轴的元素数量。 然而，张量的维度用来表示张量具有的轴数。 在这个意义上，张量的某个轴的维数就是这个轴的长度。
 
@@ -76,7 +76,7 @@ print(x.shape)
 
 ### 2.3.3. 矩阵
 
-![image-asdasdads](./assets/Snipaste_2023-12-04_16-42-30.png)
+![image-asdasdads](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_16-42-30.png)
 
 
 ```python
@@ -84,7 +84,7 @@ A = torch.arange(20).reshape(5, 4)
 print(A)
 ```
 
-![image-asdasdasddasdas](./assets/Snipaste_2023-12-04_17-04-39.png)
+![image-asdasdasddasdas](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_17-04-39.png)
 
 
 ```python
@@ -168,7 +168,7 @@ print(A * 2)
     NameError: name 'torch' is not defined
 
 
-![image-Hadamard](./assets/Snipaste_2023-12-04_17-28-34.png)
+![image-Hadamard](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_17-28-34.png)
 将张量乘以或加上一个标量不会改变张量的形状，其中张量的每个元素都将与标量相加或相乘。
 
 
@@ -197,7 +197,7 @@ print(A * B)
 
 ### 2.3.6. 降维
 我们可以对任意张量进行的一个有用的操作是计算其元素的和，数学表示法使用∑符号表示求和,为了表示长度为d的向量中元素的综合，可以记为∑(^d)(_i=1){x_i},在代码中可以调用起算求和的函数。
-![ image-Snipaste_2023-12-04_17-28-555.png ](./assets/Snipaste_2023-12-09_15-44-31.png)
+![ image-Snipaste_2023-12-04_17-28-555.png ](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-44-31.png)
 默认情况下，调用求和函数会沿所有的轴降低张量的维度，使它变为一个标量。 我们还可以指定张量沿哪一个轴来通过求和降低维度。 以矩阵为例，为了通过求和所有行的元素来降维（轴0），可以在调用函数时指定axis=0。 由于输入矩阵沿0轴降维以生成输出向量，因此输入轴0的维数在输出形状中消失。
 
 
@@ -334,11 +334,11 @@ print(A_cumsum)
 
 
 ### 2.3.7. 点积（Dot Product）
-![image_Snipaste_2023-12-09_10-25-39.png](./assets/Snipaste_2023-12-09_15-44-54.png)
+![image_Snipaste_2023-12-09_10-25-39.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-44-54.png)
 
 点积计算规则： 对应元素相乘的和
 注意，我们可以通过执行按元素乘法，然后进行求和来表示两个向量的点积
-![image_Snipaste_2023-12-09_11-05-50.png](./assets/Snipaste_2023-12-09_15-45-11.png)
+![image_Snipaste_2023-12-09_11-05-50.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-45-11.png)
 
 
 ```python
@@ -362,7 +362,7 @@ print(torch.sum(x * y))
 
 
 ### 2.3.8. 矩阵-向量积
-![image_Snipaste_2023-12-09_11-08-47.png](./assets/Snipaste_2023-12-09_15-45-27.png)
+![image_Snipaste_2023-12-09_11-08-47.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-45-27.png)
 在代码中使用张量表示矩阵-向量积，我们使用mv函数。 当我们为矩阵A和向量x调用torch.mv(A, x)时，会执行矩阵-向量积。 注意，A的列维数（沿轴1的长度）必须与x的维数（其长度）相同。
 
 
@@ -386,7 +386,7 @@ print(Ax_sum)
 
 
 ### 2.3.9. 矩阵-矩阵乘法
-![image_Snipaste_2023-12-09_11-28-40.png](./assets/Snipaste_2023-12-09_15-45-44.png)
+![image_Snipaste_2023-12-09_11-28-40.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-45-44.png)
 
 矩阵乘法要求： 矩阵A(n*k) 和矩阵B(k*m)他们两个中 矩阵A的列数需要等于矩阵B的行数
 矩阵-矩阵乘法可以简单地称为矩阵乘法，不应与“Hadamard积”混淆。
@@ -418,11 +418,11 @@ print(mm_AB)
 ### 2.3.10. 范数
 
 线性代数中最有用的一些运算符是范数（norm）。 非正式地说，向量的范数是表示一个向量有多大。 这里考虑的大小（size）概念不涉及维度，而是分量的大小。
-![image_Snipaste_2023-12-09_11-37-11.png](./assets/Snipaste_2023-12-09_15-46-03.png)
+![image_Snipaste_2023-12-09_11-37-11.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-46-03.png)
 
 
-![image_Snipaste_2023-12-09_11-52-02.png](./assets/Snipaste_2023-12-09_15-46-16.png)
-![image_Snipaste_2023-12-09_11-54-20.png](./assets/Snipaste_2023-12-09_15-46-32.png)
+![image_Snipaste_2023-12-09_11-52-02.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-46-16.png)
+![image_Snipaste_2023-12-09_11-54-20.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-46-32.png)
 
 
 
