--- a/2.4  微积分.md
+++ b/2.4  微积分.md
@@ -1,6 +1,6 @@
 ## 2.4 微积分
 在2500年前，古希腊人把一个多边形分成三角形，并把它们的面积相加，才找到计算多边形面积的方法。 为了求出曲线形状（比如圆）的面积，古希腊人在这样的形状上刻内接多边形。 如 图2.4.1所示，内接多边形的等长边越多，就越接近圆。 这个过程也被称为逼近法（method of exhaustion）
-![ image_Snipaste_2023-12-09_14-10-23.png ](./assets/Snipaste_2023-12-09_15-47-08.png)
+![ image_Snipaste_2023-12-09_14-10-23.png ](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-47-08.png)
 
 事实上，逼近法就是积分（integral calculus）的起源。 2000多年后，微积分的另一支，微分（differential calculus）被发明出来。 在微分学最重要的应用是优化问题，即考虑如何把事情做到最好。 正如在 2.3.10.1节中讨论的那样， 这种问题在深度学习中是无处不在的。
 
@@ -13,7 +13,7 @@
 
 ### 2.4.1. 导数和微分
 我们首先讨论导数的计算，这是几乎所有深度学习优化算法的关键步骤。 在深度学习中，我们通常选择对于模型参数可微的损失函数。 简而言之，对于每个参数， 如果我们把这个参数增加或减少一个无穷小的量，可以知道损失会以多快的速度增加或减少，
-![image_Snipaste_2023-12-09_14-20-49.png](./assets/Snipaste_2023-12-09_15-47-36.png)
+![image_Snipaste_2023-12-09_14-20-49.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-47-36.png)
 
 
 ```python
@@ -29,7 +29,7 @@ def f(x):
 
 ```
 
-![image_Snipaste_2023-12-09_14-22-36.png](./assets/Snipaste_2023-12-09_15-47-50.png)
+![image_Snipaste_2023-12-09_14-22-36.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-47-50.png)
 
 
 ```python
@@ -48,11 +48,11 @@ for i in range(5):
     h=0.00100, numerical limit=2.00300
     h=0.00010, numerical limit=2.00030
     h=0.00001, numerical limit=2.00003
-    
 
-![image_Snipaste_2023-12-09_14-33-38.png](./assets/Snipaste_2023-12-09_15-48-05.png)
-![image_Snipaste_2023-12-09_14-36-29.png](./assets/Snipaste_2023-12-09_15-48-24.png)
-![image_Snipaste_2023-12-09_14-40-39.png](./assets/Snipaste_2023-12-09_15-48-33.png)
+
+![image_Snipaste_2023-12-09_14-33-38.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-48-05.png)
+![image_Snipaste_2023-12-09_14-36-29.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-48-24.png)
+![image_Snipaste_2023-12-09_14-40-39.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-48-33.png)
 
 注意，注释#@save是一个特殊的标记，会将对应的函数、类或语句保存在d2l包中。 因此，以后无须重新定义就可以直接调用它们（例如，d2l.use_svg_display()）。
 
@@ -138,20 +138,20 @@ plot(x, [f(x), 2 * x - 3], 'x', 'f(x)', legend=['f(x)', 'Tangent line (x=1)'])
 ```
 
 
-    
+​    
 ![svg](output_12_0.svg)
-    
+​    
 
 
 ### 2.4.2. 偏导数
 
-![image_Snipaste_2023-12-09_14-45-02.png](./assets/Snipaste_2023-12-09_15-48-59.png)
+![image_Snipaste_2023-12-09_14-45-02.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-48-59.png)
 
 ### 2.4.3. 梯度
-![image_Snipaste_2023-12-09_14-47-07.png](./assets/Snipaste_2023-12-09_15-49-12.png)
+![image_Snipaste_2023-12-09_14-47-07.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-49-12.png)
 
 ### 2.4.4 链式法则
-![image_Snipaste_2023-12-09_14-47-31.png](./assets/Snipaste_2023-12-09_15-49-24.png)
+![image_Snipaste_2023-12-09_14-47-31.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-49-24.png)
 
 ### 2.4.5. 小结
 1. 微分和积分是微积分的两个分支，前者可以应用于深度学习中的优化问题。
