--- a/2.6 概率.md
+++ b/2.6 概率.md
@@ -4,11 +4,11 @@
 根据病人的临床病史，我们可能想预测他们在下一年心脏病发作的概率。 在飞机喷气发动机的异常检测中，我们想要评估一组发动机读数为正常运行情况的概率有多大。 在强化学习中，我们希望智能体（agent）能在一个环境中智能地行动。 这意味着我们需要考虑在每种可行的行为下获得高奖励的概率。 当我们建立推荐系统时，我们也需要考虑概率。 例如，假设我们为一家大型在线书店工作，我们可能希望估计某些用户购买特定图书的概率。 为此，我们需要使用概率学。 有完整的课程、专业、论文、职业、甚至院系，都致力于概率学的工作。 所以很自然地，我们在这部分的目标不是教授整个科目。 相反，我们希望教给读者基础的概率知识，使读者能够开始构建第一个深度学习模型， 以便读者可以开始自己探索它。
 
 现在让我们更认真地考虑第一个例子：根据照片区分猫和狗。 这听起来可能很简单，但对于机器却可能是一个艰巨的挑战。 首先，问题的难度可能取决于图像的分辨率。
-![image_Snipaste_2023-12-09_15-55-27.png](./assets/Snipaste_2023-12-09_15-55-27.png)
-![image_Snipaste_2023-12-09_15-55-46.png](./assets/Snipaste_2023-12-09_15-55-46.png)
+![image_Snipaste_2023-12-09_15-55-27.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-55-27.png)
+![image_Snipaste_2023-12-09_15-55-46.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-55-46.png)
 
 ### 2.6.1. 基本概率论
-![image_Snipaste_2023-12-09_15-56-14.png](./assets/Snipaste_2023-12-09_15-56-14.png)
+![image_Snipaste_2023-12-09_15-56-14.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_15-56-14.png)
 
 
 
@@ -99,10 +99,10 @@ d2l.plt.legend();
 
 每条实线对应于骰子的6个值中的一个，并给出骰子在每组实验后出现值的估计概率。 当我们通过更多的实验获得更多的数据时，这6条实体曲线向真实概率收敛。
 ### 2.6.1.1. 概率论公理
-![image_Snipaste_2023-12-09_16-28-06.png](./assets/Snipaste_2023-12-09_16-28-06.png)
+![image_Snipaste_2023-12-09_16-28-06.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-28-06.png)
 ### 2.6.1.2. 随机变量
 
-![image_Snipaste_2023-12-09_16-28-34.png](./assets/Snipaste_2023-12-09_16-28-34.png)
+![image_Snipaste_2023-12-09_16-28-34.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-28-34.png)
 
 ### 2.6.2. 处理多个随机变量
 很多时候，我们会考虑多个随机变量。 比如，我们可能需要对疾病和症状之间的关系进行建模。 给定一个疾病和一个症状，比如“流感”和“咳嗽”，以某个概率存在或不存在于某个患者身上。 我们需要估计这些概率以及概率之间的关系，以便我们可以运用我们的推断来实现更好的医疗服务。
@@ -110,35 +110,35 @@ d2l.plt.legend();
 再举一个更复杂的例子：图像包含数百万像素，因此有数百万个随机变量。 在许多情况下，图像会附带一个标签（label），标识图像中的对象。 我们也可以将标签视为一个随机变量。 我们甚至可以将所有元数据视为随机变量，例如位置、时间、光圈、焦距、ISO、对焦距离和相机类型。 所有这些都是联合发生的随机变量。 当我们处理多个随机变量时，会有若干个变量是我们感兴趣的。
 
 ### 2.6.2.1. 联合概率
-![image_Snipaste_2023-12-09_16-29-17.png](./assets/Snipaste_2023-12-09_16-29-17.png)
+![image_Snipaste_2023-12-09_16-29-17.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-29-17.png)
 
 ### 2.6.2.2. 条件概率
-![image_Snipaste_2023-12-09_16-29-46.png](./assets/Snipaste_2023-12-09_16-29-46.png)
+![image_Snipaste_2023-12-09_16-29-46.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-29-46.png)
 
 ### 2.6.2.3. 贝叶斯定理
-![image_Snipaste_2023-12-09_16-30-22.png](./assets/Snipaste_2023-12-09_16-30-22.png)
+![image_Snipaste_2023-12-09_16-30-22.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-30-22.png)
 
 ### 2.6.2.4. 边际化
 
-![image_Snipaste_2023-12-09_16-30-50.png](./assets/Snipaste_2023-12-09_16-30-50.png)
+![image_Snipaste_2023-12-09_16-30-50.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-30-50.png)
 
 ### 2.6.2.5. 独立性
 
-![image_Snipaste_2023-12-09_16-31-14.png](./assets/Snipaste_2023-12-09_16-31-14.png)
+![image_Snipaste_2023-12-09_16-31-14.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-31-14.png)
 
 ### 2.6.2.6. 应用
 
-![image_Snipaste_2023-12-09_16-31-41.png](./assets/Snipaste_2023-12-09_16-31-41.png)
+![image_Snipaste_2023-12-09_16-31-41.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-31-41.png)
 
-![image_Snipaste_2023-12-09_16-32-00.png](./assets/Snipaste_2023-12-09_16-32-00.png)
+![image_Snipaste_2023-12-09_16-32-00.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-32-00.png)
 
-![image_Snipaste_2023-12-09_16-32-25.png](./assets/Snipaste_2023-12-09_16-32-25.png)
+![image_Snipaste_2023-12-09_16-32-25.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-32-25.png)
 
-![image_Snipaste_2023-12-09_16-32-40.png](./assets/Snipaste_2023-12-09_16-32-40.png)
+![image_Snipaste_2023-12-09_16-32-40.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-32-40.png)
 
 ### 2.6.3. 期望和方差
 
-![image_Snipaste_2023-12-09_16-33-04.png](./assets/Snipaste_2023-12-09_16-33-04.png)
+![image_Snipaste_2023-12-09_16-33-04.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-09_16-33-04.png)
 
 ### 2.6.4. 小结
 
