--- a/3.1 线性回归.md
+++ b/3.1 线性回归.md
@@ -9,24 +9,24 @@
 
 ### 3.1.1 线性回归的基本元素
 
-![image_Snipaste_2023-12-14_15-25-04.png](./assets/Snipaste_2023-12-14_15-25-04.png)
+![image_Snipaste_2023-12-14_15-25-04.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_15-25-04.png)
 
 ### 3.1.1.1 线性模型
-![image_Snipaste_2023-12-14_15-29-11.png](./assets/Snipaste_2023-12-14_15-29-11.png)
+![image_Snipaste_2023-12-14_15-29-11.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_15-29-11.png)
 
-![image_Snipaste_2023-12-14_15-37-52.png](./assets/Snipaste_2023-12-14_15-37-52.png)
+![image_Snipaste_2023-12-14_15-37-52.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_15-37-52.png)
 
 ### 3.1.1.2. 损失函数
 
-![image_Snipaste_2023-12-14_15-40-40.png](./assets/Snipaste_2023-12-14_15-40-40.png)
+![image_Snipaste_2023-12-14_15-40-40.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_15-40-40.png)
 
-![image_Snipaste_2023-12-14_15-43-26.png](./assets/Snipaste_2023-12-14_15-43-26.png)
+![image_Snipaste_2023-12-14_15-43-26.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_15-43-26.png)
 
 
 
 
 ### 3.1.1.3. 解析解
-![image_Snipaste_2023-12-14_15-59-59.png](./assets/Snipaste_2023-12-14_15-59-59.png)
+![image_Snipaste_2023-12-14_15-59-59.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_15-59-59.png)
 
 
 ### 3.1.1.4. 随机梯度下降
@@ -35,12 +35,12 @@
 本书中我们用到一种名为梯度下降（gradient descent）的方法， 这种方法几乎可以优化所有深度学习模型。 它通过不断地在损失函数递减的方向上更新参数来降低误差。
 
 梯度下降最简单的用法是计算损失函数（数据集中所有样本的损失均值） 关于模型参数的导数（在这里也可以称为梯度）。 但实际中的执行可能会非常慢：因为在每一次更新参数之前，我们必须遍历整个数据集。 因此，我们通常会在每次需要计算更新的时候随机抽取一小批样本， 这种变体叫做小批量随机梯度下降（minibatch stochastic gradient descent）。
-![image_Snipaste_2023-12-14_16-07-07.png](./assets/Snipaste_2023-12-14_16-07-07.png)
-![image_Snipaste_2023-12-14_16-11-41.png](./assets/Snipaste_2023-12-14_16-11-41.png)
+![image_Snipaste_2023-12-14_16-07-07.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-07-07.png)
+![image_Snipaste_2023-12-14_16-11-41.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-11-41.png)
 
 
 ### 3.1.1.5. 用模型进行预测
-![image_Snipaste_2023-12-14_16-12-09.png](./assets/Snipaste_2023-12-14_16-12-09.png)
+![image_Snipaste_2023-12-14_16-12-09.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-12-09.png)
 
 ###  3.1.2 矢量化加速
 在训练我们的模型时，我们经常希望能够同时处理整个小批量的样本。 为了实现这一点，需要我们对计算进行矢量化， 从而利用线性代数库，而不是在Python中编写开销高昂的for循环。
@@ -114,7 +114,7 @@ f'{timer.stop():.5f} sec'
 ```
 
     tensor([2., 2., 2.,  ..., 2., 2., 2.])
-    
+
 
 
 
@@ -134,7 +134,7 @@ f'{timer.stop():.5f} sec'
 ```
 
     tensor([2., 2., 2.,  ..., 2., 2., 2.])
-    
+
 
 
 
@@ -147,7 +147,7 @@ f'{timer.stop():.5f} sec'
 
 ### 3.1.3. 正态分布与平方损失
 
-![image_Snipaste_2023-12-14_16-20-56.png](./assets/Snipaste_2023-12-14_16-20-56.png)
+![image_Snipaste_2023-12-14_16-20-56.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-20-56.png)
 
 
 
@@ -171,12 +171,12 @@ d2l.plot(x, [normal(x, mu, sigma) for mu, sigma in params], xlabel='x',
 ```
 
 
-    
+​    
 ![svg](output_15_0.svg)
-    
+​    
 
 
-![image_Snipaste_2023-12-14_16-29-49.png](./assets/Snipaste_2023-12-14_16-29-49.png)
+![image_Snipaste_2023-12-14_16-29-49.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-29-49.png)
 
 ### 3.1.4 从线性回归到深度网络
 
@@ -185,16 +185,16 @@ d2l.plot(x, [normal(x, mu, sigma) for mu, sigma in params], xlabel='x',
 ### 3.1.4.1. 神经网络图
 
 深度学习从业者喜欢绘制图表来可视化模型中正在发生的事情。 在 图3.1.2中，我们将线性回归模型描述为一个神经网络。 需要注意的是，该图只显示连接模式，即只显示每个输入如何连接到输出，隐去了权重和偏置的值。
-![image_Snipaste_2023-12-14_16-37-28.png](./assets/Snipaste_2023-12-14_16-37-28.png)
+![image_Snipaste_2023-12-14_16-37-28.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-37-28.png)
 
-![image_Snipaste_2023-12-14_16-38-32.png](./assets/Snipaste_2023-12-14_16-38-32.png)
+![image_Snipaste_2023-12-14_16-38-32.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-38-32.png)
 
 
 ### 3.1.4.2. 生物学
 线性回归发明的时间（1795年）早于计算神经科学，所以将线性回归描述为神经网络似乎不合适。 当控制学家、神经生物学家沃伦·麦库洛奇和沃尔特·皮茨开始开发人工神经元模型时， 他们为什么将线性模型作为一个起点呢？ 我们来看一张图片 图3.1.3： 这是一张由树突（dendrites，输入终端）、 细胞核（nucleus，CPU）组成的生物神经元图片。 轴突（axon，输出线）和轴突端子（axon terminal，输出端子） 通过突触（synapse）与其他神经元连接。
 
-![image_Snipaste_2023-12-14_16-41-02.png](./assets/Snipaste_2023-12-14_16-41-02.png)
-![image_Snipaste_2023-12-14_16-41-26.png](./assets/Snipaste_2023-12-14_16-41-26.png)
+![image_Snipaste_2023-12-14_16-41-02.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-41-02.png)
+![image_Snipaste_2023-12-14_16-41-26.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-14_16-41-26.png)
 
 
 ### 3.1.5. 小结
