--- a/5. 多变量线性回归.md
+++ b/5. 多变量线性回归.md
@@ -12,7 +12,7 @@ n : 特征的数量 \\
 x^{(i)}_j:特征矩阵中第i行的第j个,第i个训练实例的第j个特征 \\
 支持多变量的假设函数h： ℎ𝜃(𝑥) = 𝜃0 + 𝜃1𝑥1 + 𝜃2𝑥2+. . . +𝜃𝑛𝑥𝑛\\
 $$
-![image-20231128143055900](./assets/f32d8d2c2f404f23abffbe12168f5fd0.png)
+![image-20231128143055900](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsf32d8d2c2f404f23abffbe12168f5fd0.png)
 
 ​	
 $$
@@ -23,7 +23,7 @@ $$
 特征矩阵𝑋的维度是 𝑚 ∗ (𝑛 + 1)。 所以公式可以简化为：ℎ𝜃(𝑥) = 𝜃^𝑇𝑋， \\
 其中上标𝑇代表矩阵转置
 $$
-​	![image-20231128143055901](./assets/image-20231128143055901.png)
+​	![image-20231128143055901](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231128143055901.png)
 
 ​	
 
@@ -36,9 +36,9 @@ $$
 其中 {h_\theta}(x)={\theta^T}X={\theta_0}+{\theta_1}{x_1}+{\theta_2}{x_2}+...+{\theta_n}{x_n}
 $$
 
-![image-20231128151313567](./assets/image-20231128151313567.png)
+![image-20231128151313567](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231128151313567.png)
 
-![image-20231128151406260](./assets/image-20231128151406260.png)
+![image-20231128151406260](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231128151406260.png)
 
 ```python
 def computeCost(X, y, theta):
@@ -54,11 +54,11 @@ def computeCost(X, y, theta):
 
 以房价问题为例，假设我们使用两个特征，房屋的尺寸和房间的数量，尺寸的值为 0-2000平方英尺，而房间数量的值则是0-5，以两个参数分别为横纵坐标，绘制代价函数的等高线图能，看出图像会显得很扁，梯度下降算法需要非常多次的迭代才能收敛。
 
-![img](./assets/966e5a9b00687678374b8221fdd33475.jpg)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets966e5a9b00687678374b8221fdd33475.jpg)
 
 解决的方法是尝试将所有特征的尺度都尽量缩放到-1到1之间。如图：
 
-![img](./assets/b8167ff0926046e112acf789dba98057.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsb8167ff0926046e112acf789dba98057.png)
 $$
 最简单的方法是令 x_n={\frac{{x_n}-u_n}{sn}}其中{u_n}是平均值，{s_n}是标准差
 $$
@@ -67,11 +67,11 @@ $$
 
 ​	梯度下降算法收敛所需要的迭代次数根据模型的不同而不同，我们不能提前预知，我们可以绘制迭代次数和代价函数的图表来观测算法在何时趋于收敛。
 
-![img](./assets/cd4e3df45c34f6a8e2bb7cd3a2849e6c.jpg)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetscd4e3df45c34f6a8e2bb7cd3a2849e6c.jpg)
 
 也有一些自动测试是否收敛的方法，例如将代价函数的变化值与某个阀值（例如0.001）进行比较，但通常看上面这样的图表更好。
 
-梯度下降算法的每次迭代受到学习率的影响，如果学习率![image-20231128153809088](./assets/image-20231128153809088.png)过小，则达到收敛所需的迭代次数会非常高；如果学习率![image-20231128153816115](./assets/image-20231128153816115.png)过大，每次迭代可能不会减小代价函数，可能会越过局部最小值导致无法收敛。
+梯度下降算法的每次迭代受到学习率的影响，如果学习率![image-20231128153809088](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231128153809088.png)过小，则达到收敛所需的迭代次数会非常高；如果学习率![image-20231128153816115](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231128153816115.png)过大，每次迭代可能不会减小代价函数，可能会越过局部最小值导致无法收敛。
 
 通常可以考虑尝试些学习率：
 $$
@@ -82,7 +82,7 @@ $$
 
 如房价预测问题，
 
-![img](./assets/8ffaa10ae1138f1873bc65e1e3657bd4.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets8ffaa10ae1138f1873bc65e1e3657bd4.png)
 $$
 {{h_\theta}({x})}={\theta_0}+{{\theta_1}*frontage}+{{\theta_2}*depth} \\
 x_1=frontage(临界宽度) x_2=depth(纵向深度) \\
@@ -90,9 +90,9 @@ x=frontage*depth=area(面积) \\
 则：{{h_\theta}({x})}={\theta_0}+{{\theta_1}x},线性回归并不适合与所有数据，\\有时我们需要曲线来适应我们的数据，比如一个二次方程模型：\\
 {h_\theta{(x)}}={\theta_0}+{{\theta_1}x_1}+{{\theta_2}x^2_2} 或者三次模型：\\{h_\theta{(x)}}={\theta_0}+{{\theta_1}x_1}+{{\theta_2}x^2_2}+{{\theta_2}x^3_3}
 $$
-​	这里为了让函数曲线拥有更好的拟合程度，添加![image-20231128161319710](./assets/image-20231128161319710.png),![image-20231128161334282](./assets/image-20231128161334282.png)，特征变量增加函数的适用性（一次方程，二次方程函数)
+​	这里为了让函数曲线拥有更好的拟合程度，添加![image-20231128161319710](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231128161319710.png),![image-20231128161334282](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231128161334282.png)，特征变量增加函数的适用性（一次方程，二次方程函数)
 
-![img](./assets/3a47e15258012b06b34d4e05fb3af2cf.jpg)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets3a47e15258012b06b34d4e05fb3af2cf.jpg)
 $$
 通常我们需要先观察数据然后再决定准备尝试怎样的模型，另外，我们可以令：x_2=x^2_2 \\
 ,x_3=x^3_3,从而将模型转换为线性回归模型。根据函数图形特性，我们还可以使：\\
@@ -104,7 +104,7 @@ $$
 
 到目前为止，我们都在使用梯度下降算法，但是对于某些线性回归问题，正规方程方法是更好的解决方案。如：
 
-![img](./assets/a47ec797d8a9c331e02ed90bca48a24b.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsa47ec797d8a9c331e02ed90bca48a24b.png)
 $$
 正规方程是通过求解下面的方程来找出使得代价函数最小的参数的：{\frac{\partial }{\partial{\theta_j}}}J(\theta_j)=0。\\
  假设我们的训练集特征矩阵为X(包含了x_0=1)并且我们的训练集结果为向量y，\\则利用正规方程解出向量{\theta}={({X^T}{X})^{-1}}{X^T}{y}。上标T代表矩阵转置，上标-1\\代表矩阵的逆。设矩阵A={X^T}X,则：({X^T}{X})^{-1}=A^{-1}以下表示数据为：\\
@@ -118,19 +118,19 @@ $$
 $$
 转置矩阵
 
-![img](./assets/20190903151320287.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets20190903151320287.png)
 
 例：
 
-![img](./assets/261a11d6bce6690121f26ee369b9e9d1.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets261a11d6bce6690121f26ee369b9e9d1.png)
 
 即：
 
-![img](./assets/c8eedc42ed9feb21fac64e4de8d39a06.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsc8eedc42ed9feb21fac64e4de8d39a06.png)
 
 运用正规方程方法求解参数：
 
-![img](./assets/b62d24a1f709496a6d7c65f87464e911.jpg)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsb62d24a1f709496a6d7c65f87464e911.jpg)
 
 ​	注：对于那些不可逆的矩阵（通常是因为特征之间不独立，如同时包含英尺为单位的尺寸和米为单位的尺寸两个特征，也有可能是特征数量大于训练集的数量），正规方程方法是不能用的。
 
@@ -165,6 +165,6 @@ import numpy as np
 
 
 
-![image-20231129100129748](./assets/image-20231129100129748.png)
+![image-20231129100129748](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231129100129748.png)
 
-![image-20231129100600128](./assets/image-20231129100600128.png)
+![image-20231129100600128](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231129100600128.png)
