--- a/人脸识别.md
+++ b/人脸识别.md
@@ -314,7 +314,7 @@ if __name__ == "__main__":
 
 ### **模型结构**
 
-![img](./assets/v2-714dd80efe305299e2f204e59e47c259_720w.webp)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-714dd80efe305299e2f204e59e47c259_720w.webp)
 
 ## 1. 人脸识别模型
 
