--- a/名称解释.md
+++ b/名称解释.md
@@ -7,13 +7,13 @@
   版本空间定义1：
   版本空间(version space)是概念学习中与已知数据集一致的所有假设(hypothesis)的子集集合。
 
-![img](./assets/1245030-20180130112547015-643653682.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets1245030-20180130112547015-643653682.png)
 
  	对于二维空间中的“矩形”假设（上图），绿色加号代表正类样本，红色小圈代表负类样本。 GB 是最大泛化正假设边界 (maximally General positive hypothesis Boundary), SB 是最大精确正假设边界 (maximally Specific positive hypothesis Boundary). GB与SB所围成的区域中的矩形即为版本空间中的假设，也即GB与SB围成的区域就是版本空间。
 
 ​	 在一些需要对假设的泛化能力排序的情形下，就可以通过GB与SB这两个上下界来表示版本空间。
 
-![img](./assets/1245030-20180130105558062-939107920.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets1245030-20180130105558062-939107920.png)
 
 ​	**理解：**以表1.1为例，负类样本相当于在假设空间中，与表1.1与正例不一致的假设、和（或）与反例一致的假设（即与表1.1不吻合的假设）数据集，正类样本即是表1.1中的数据集。版本空间是边界GB和边界SB之间围成的区域。
 
