--- a/1. 初认.md
+++ b/1. 初认.md
@@ -14,7 +14,7 @@
 
 ### 1.1 监督学习
 
-![img](./assets/v2-fd3531d0b9369139177a916b228550eb_720w.webp)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-fd3531d0b9369139177a916b228550eb_720w.webp)
 
 ​	将训练集喂给机器学习算法，输出一个假设函数 h，然后新输入一个自变 x 到假设函数内，然后输出一个因变量 y 值。
 
@@ -38,7 +38,7 @@
 
 ​	单变量线性回归指的是只有一个自变量。有如下这样一个训练集，特征为房子的大小，因变量是房价。那么对于一个新的房子的大小，我们如何根据历史的数据来预测出来该房子的价格呢？
 
-​	![img](./assets/v2-421b4a130f1a65117cb83f4a693b408f_720w.webp)
+​	![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-421b4a130f1a65117cb83f4a693b408f_720w.webp)
 
 
 $$
@@ -51,24 +51,24 @@ h代表学习算法的解决方案或函数也称为假设（hypothesis）\\
 $$
 ​	根据如上数据：我们在一个xy轴上面标注这些点，然后预设一个假设函数：
 
-![img](./assets/v2-e65d08e61369c394279d3786da28bade_720w.webp)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-e65d08e61369c394279d3786da28bade_720w.webp)
 
 
 
 ​	选择不同的参数值，就会得到不同的直线。**对于假设函数所预测出来的值和实际值之间的差距就是建模误差，也就是存在着一个代价函数。**
 代价函数的公式如下：
 
-![img](./assets/v2-40c915eb3c8ce341ce3209720b308e37_720w.webp)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-40c915eb3c8ce341ce3209720b308e37_720w.webp)
 
 ​	我们的目标就是减少假设函数预测数来的值和实际值之间的差距，也就是让代价函数最小。而让**代价函数**最小，就需要我们选择合适的参数值。
 
 ​	这个方法定义的J(θ)在最优化理论中称为凸（Convex）函数，即全局只有一个最优解，然后通过梯度下降算法找到最优解即可，梯度下降算法的函数如下：
 
-![img](./assets/v2-d19e51a8b286977143b2fc8368022a93_720w.webp)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-d19e51a8b286977143b2fc8368022a93_720w.webp)
 
 ### 2.2 代价函数
 
-​	![img](./assets/d385f8a293b254454746adee51a027d4.png)
+​	![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsd385f8a293b254454746adee51a027d4.png)
 
 ​	
 $$
@@ -80,7 +80,7 @@ $$
 
 ​	我们选择的参数决定了我们得到的直线相对于我们的训练集的准确程度，模型所预测的值与训练集中实际值之间的差距（下图中蓝线所指）就是**建模误差**（**modeling error**）。
 
-![img](./assets/6168b654649a0537c67df6f2454dc9ba.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets6168b654649a0537c67df6f2454dc9ba.png)
 
 ​	
 
@@ -89,7 +89,7 @@ $$
 我们的目标便是选择出可以使得建模误差的平方和能够最小的模型参数。 即使得代价函数。\\{J(\theta_0,\theta_1)}={\frac{1}{2m}\sum_{i = 1} (h_\theta(x^i)-(y^i))}^2 最小 \\
 我们绘制一个等高线图，三个坐标分别为 \theta_0 和 \theta_1 和 J(\theta_0,\theta_1)
 $$
-​	![img](./assets/27ee0db04705fb20fab4574bb03064ab.png)
+​	![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets27ee0db04705fb20fab4574bb03064ab.png)
 
 ​	代价函数也被称作平方误差函数，有时也被称为平方误差代价函数。我们之所以要求出误差的平方和，是因为误差平方代价函数，对于大多数问题，特别是回归问题，都是一个合理的选择。还有其他的代价函数也能很好地发挥作用，但是平方误差代价函数可能是解决回归问题最常用的手段了。
 
@@ -97,11 +97,11 @@ $$
 
 ### 2.3 代价函数的直观理解 l
 
-​	![img](./assets/10ba90df2ada721cf1850ab668204dc9.png)
+​	![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets10ba90df2ada721cf1850ab668204dc9.png)
 
-![img](./assets/10ba90df2ada721cf1850ab668204dc9-1700645658057-34.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets10ba90df2ada721cf1850ab668204dc9-1700645658057-34.png)
 
-![img](./assets/2c9fe871ca411ba557e65ac15d55745d.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets2c9fe871ca411ba557e65ac15d55745d.png)
 
 
 
@@ -109,11 +109,11 @@ $$
 
 
 
-![img](./assets/0b789788fc15889fe33fb44818c40852.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets0b789788fc15889fe33fb44818c40852.png)
 
 代价函数的样子，等高线图，则可以看出在三维空间中存在一个使得最小的点。
 
-![img](./assets/86c827fe0978ebdd608505cd45feb774.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets86c827fe0978ebdd608505cd45feb774.png)
 
 ​	当然，我们真正需要的是一种有效的算法，能够自动地找出这些使代价函数取最小值的参数和来。
 
@@ -127,36 +127,36 @@ $$
 
 ​	梯度下降背后的思想是：开始时我们随机选择一个参数的组合![image-20231123115022486](./assets/image-20231123115022486.png)计算代价函数，然后我们寻找下一个能让代价函数值下降最多的参数组合。我们持续这么做直到到到一个局部最小值（**local minimum**），因为我们并没有尝试完所有的参数组合，所以不能确定我们得到的局部最小值是否便是全局最小值（**global minimum**)，选择不同的初始参数组合，可能会找到不同的局部最小值。
 
-![img](./assets/db48c81304317847870d486ba5bb2015.jpg)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsdb48c81304317847870d486ba5bb2015.jpg)
 
 ​	批量梯度下降（**batch gradient descent**）算法的公式为：![image-20231123115224905](./assets/image-20231123115224905.png)
 
 ​	其中是学习率（**learning rate**），它决定了我们沿着能让代价函数下降程度最大的方向向下迈出的步子有多大，在批量梯度下降中，我们每一次都同时让所有的参数减去学习速率乘以代价函数的导数。
 
-​	![image-20231123115250460](./assets/image-20231123115250460.png)
+​	![image-20231123115250460](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231123115250460.png)
 
 ​	
 $$
 在梯度下降算法中，还有一个更微妙的问题，梯度下降中，我们要更新 \theta_0 和\\ \theta_1、、 ,当j=0 和j=1 时，会产生更新,所以你将更新j(\theta_0)和j(\theta_1)\\实现梯度下降算法的微妙之处是，在这个表达式中，如果你要更新这个等式，你需\\要同时更新\theta_0 和\theta_1 ，在这个等式中 ，我们要这么更新 \theta_0:=\theta_0，并更新\theta_1 :=\theta_1.
 $$
 
-![img](.\assets\13176da01bb25128c91aca5476c9d464.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets13176da01bb25128c91aca5476c9d464.png)
 
 ### 2.6 梯度下降的直观感受
 
-​	![image-20231125194421712](./assets/image-20231125194421712.png)
+​	![image-20231125194421712](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125194421712.png)
 
 ​	
 $$
 描述：对\theta赋值，使得J(\theta)按梯度下降最快方向进行，一直迭代下去，\\最终得到局部最小值，其中as=是学习率(learning rate),\\它决定了我们沿着能能让代价函数下降程度最大的方向下迈出的步有多大。
 $$
-![img](./assets/ee916631a9f386e43ef47efafeb65b0f.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsee916631a9f386e43ef47efafeb65b0f.png)
 
 ​		**梯度下降可以理解为如何寻找到函数斜率最小的点**，**通过求得函数斜率最小点求出代价函数最小值。注意这里求出的点属于局部最低点。**
 
 ​		对于这个问题，求导的目的，基本上可以说取这个红点的切线，就是这样一条红色的直线，刚好与函数相切于这一点，让我们看看这条红色直线的斜率，就是这条刚好与函数曲线相切的这条直线，这条直线的斜率正好是这个三角形的高度除以这个水平长度，现在，这条线有一个正斜率，也就是说它有正导数，因此，我得到的新的![image-20231125195518273](./assets/image-20231125195518273.png)，![image-20231125195523481](./assets/image-20231125195523481.png)更新后等于![image-20231125195540892](./assets/image-20231125195540892.png)减去一个正数乘以![image-20231125195549171](./assets/image-20231125195549171.png)
 
-​	这就是梯度下降法的更新规则：![image-20231125195608109](./assets/image-20231125195608109.png)
+​	这就是梯度下降法的更新规则：![image-20231125195608109](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195608109.png)
 
 ​	**如果![image-20231125195631878](./assets/image-20231125195631878.png)太小或![image-20231125195634384](./assets/image-20231125195634384.png)太大会出现什么情况？：**
 
@@ -170,7 +170,7 @@ $$
 
 ​	我们来看一个例子，这是代价函数![image-20231125195845198](./assets/image-20231125195845198.png)。
 
-![img](./assets/4668349e04cf0c4489865e133d112e98.png)
+![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets4668349e04cf0c4489865e133d112e98.png)
 
 ​		在梯度下降法中，当我们接近局部最低点时，梯度下降法会自动采取更小的幅度，这是因为当我们接近局部最低点时，很显然在局部最低时导数等于零，所以当我们接近局部最低时，导数值会自动变得越来越小，所以梯度下降将自动采取较小的幅度，这就是梯度下降的做法。所以实际上没有必要再另外减小![image-20231125195646739](./assets/image-20231125195646739.png)
 
@@ -184,11 +184,11 @@ $$
 
 ​	梯度下降算法和线性回归算法比较如图：
 
-![image-20231125200555129](./assets/image-20231125200555129.png)
+![image-20231125200555129](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200555129.png)
 
-​	![image-20231125200703462](./assets/image-20231125200703462.png)
+​	![image-20231125200703462](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200703462.png)
 
-![image-20231125200824683](./assets/image-20231125200824683.png)
+![image-20231125200824683](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200824683.png)
 
 ## 3. 线性代数
 
@@ -196,23 +196,23 @@ $$
 
 ### 3.1 矩阵和向量
 
-​	![image-20231125201135190](./assets/image-20231125201135190.png)
+​	![image-20231125201135190](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201135190.png)
 
-![image-20231125201146373](./assets/image-20231125201146373.png)
+![image-20231125201146373](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201146373.png)
 
-![image-20231125201156400](./assets/image-20231125201156400.png)
+![image-20231125201156400](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201156400.png)
 
 ### 3.2 加法和标量乘法
 
-​	![image-20231125201447237](./assets/image-20231125201447237.png)
+​	![image-20231125201447237](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201447237.png)
 
 ### 3.3 矩阵向量乘法
 
 ​	**矩阵（m \*n）与向量（m\*n）相乘需要注意:矩阵的列数需要与响亮的行数相同才能进行运算**
 
-​	![image-20231125201931191](./assets/image-20231125201931191.png)
+​	![image-20231125201931191](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201931191.png)
 
-![image-20231125201938278](./assets/image-20231125201938278.png)
+![image-20231125201938278](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201938278.png)
 
 ### 3.4 矩阵乘法
 
@@ -220,12 +220,12 @@ $$
 
 ​	举例：
 
-​	![image-20231125202220736](./assets/image-20231125202220736.png)
+​	![image-20231125202220736](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125202220736.png)
 
 ### 3.5 矩阵乘法的性质
 
-​	![image-20231125202259342](./assets/image-20231125202259342.png)
+​	![image-20231125202259342](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125202259342.png)
 
 ### 3.6 逆、转置
 
-![image-20231125202556328](./assets/image-20231125202556328.png)
+![image-20231125202556328](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125202556328.png)
