--- a/3.5 模型选择.md
+++ b/3.5 模型选择.md
@@ -26,11 +26,11 @@
 
 ###  模型复杂度
 为了解释模型复杂度，我们以多项式函数拟合为例。给定一个由标量数据特征x和对应的标量标签y组成的训练数据集，多项式函数拟合的目标是找一个K阶多项式函数
-![image_Snipaste_2024-01-29_15-20-37.png](./assets/Snipaste_2024-01-29_15-20-37.png)
+![image_Snipaste_2024-01-29_15-20-37.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-29_15-20-37.png)
 来近似y。在上式中，wk是模型的权重参数，b是偏差参数。与线性回归相同，多项式函数拟合也使用平方损失函数。特别地，一阶多项式函数拟合又叫线性函数拟合。
 
 因为高阶多项式函数模型参数更多，模型函数的选择空间更大，所以高阶多项式函数比低阶多项式函数的复杂度更高。因此，高阶多项式函数比低阶多项式函数更容易在相同的训练数据集上得到更低的训练误差。给定训练数据集，模型复杂度和误差之间的关系通常如图3.4所示。给定训练数据集，如果模型的复杂度过低，很容易出现欠拟合；如果模型复杂度过高，很容易出现过拟合。应对欠拟合和过拟合的一个办法是针对数据集选择合适复杂度的模型。
-![image_Snipaste_2024-01-29_15-21-09.png](./assets/Snipaste_2024-01-29_15-21-09.png)
+![image_Snipaste_2024-01-29_15-21-09.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-29_15-21-09.png)
 
 ### 训练数据集大小
 影响欠拟合和过拟合的另一个重要因素是训练数据集的大小。一般来说，如果训练数据集中样本数过少，特别是比模型参数数量（按元素计）更少时，过拟合更容易发生。此外，泛化误差不会随训练数据集里样本数量增加而增大。因此，在计算资源允许的范围之内，我们通常希望训练数据集大一些，特别是在模型复杂度较高时，如层数较多的深度学习模型。
@@ -39,8 +39,7 @@
 为了理解模型复杂度和训练数据集大小对欠拟合和过拟合的影响，下面我们以多项式函数拟合为例来实验。首先导入实验需要的包或模块
 我们将生成一个人工数据集。在训练数据集和测试数据集中，给定样本特征x，我们使用如下的三阶多项式函数来生成该样本的标签：
 
-y=1.2x−3.4x2+5.6x3+5+ϵ,
-其中噪声项ϵ服从均值为0、标准差为0.1的正态分布。训练数据集和测试数据集的样本数都设为100。
+xxxxxxxxxx ​python
 
 
 ```python
@@ -61,19 +60,19 @@ features[:2], poly_features[:2], labels[:2]
 
     F:\minconda\envs\d2l\lib\site-packages\mxnet\numpy\utils.py:37: FutureWarning: In the future `np.bool` will be defined as the corresponding NumPy scalar.
       bool = onp.bool
-    
+
 
 
     ---------------------------------------------------------------------------
-
+    
     AttributeError                            Traceback (most recent call last)
-
+    
     Cell In[1], line 2
           1 import d2l as d2l
     ----> 2 from mxnet import autograd, gluon, nd
           3 from mxnet.gluon import data as gdata, loss as gloss, nn
           5 n_train, n_test, true_w, true_b = 100, 100, [1.2, -3.4, 5.6], 5
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\mxnet\__init__.py:33
          30 # version info
@@ -81,7 +80,7 @@ features[:2], poly_features[:2], labels[:2]
     ---> 33 from . import contrib
          34 from . import ndarray
          35 from . import ndarray as nd
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\mxnet\contrib\__init__.py:30
          27 from . import autograd
@@ -89,13 +88,13 @@ features[:2], poly_features[:2], labels[:2]
     ---> 30 from . import text
          31 from . import onnx
          32 from . import io
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\mxnet\contrib\text\__init__.py:23
          21 from . import utils
          22 from . import vocab
     ---> 23 from . import embedding
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\mxnet\contrib\text\embedding.py:36
          34 from ... import base
@@ -103,7 +102,7 @@ features[:2], poly_features[:2], labels[:2]
     ---> 36 from ... import numpy as _mx_np
          37 from ... import numpy_extension as _mx_npx
          40 def register(embedding_cls):
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\mxnet\numpy\__init__.py:23
          21 from . import random
@@ -111,7 +110,7 @@ features[:2], poly_features[:2], labels[:2]
     ---> 23 from .multiarray import *  # pylint: disable=wildcard-import
          24 from . import _op
          25 from . import _register
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\mxnet\numpy\multiarray.py:47
          45 from ..ndarray.numpy import _internal as _npi
@@ -119,7 +118,7 @@ features[:2], poly_features[:2], labels[:2]
     ---> 47 from .utils import _get_np_op
          48 from .fallback import *  # pylint: disable=wildcard-import,unused-wildcard-import
          49 from . import fallback
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\mxnet\numpy\utils.py:37
          35 int64 = onp.int64
@@ -127,7 +126,7 @@ features[:2], poly_features[:2], labels[:2]
     ---> 37 bool = onp.bool
          39 pi = onp.pi
          40 inf = onp.inf
-    
+
 
     File F:\minconda\envs\d2l\lib\site-packages\numpy\__init__.py:353, in __getattr__(attr)
         348     warnings.warn(
@@ -137,7 +136,7 @@ features[:2], poly_features[:2], labels[:2]
     --> 353     raise AttributeError(__former_attrs__[attr])
         355 if attr == 'testing':
         356     import numpy.testing as testing
-    
+
 
     AttributeError: module 'numpy' has no attribute 'bool'.
     `np.bool` was a deprecated alias for the builtin `bool`. To avoid this error in existing code, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.
@@ -196,7 +195,7 @@ def fit_and_plot(train_features, test_features, train_labels, test_labels):
 
 ##  三阶多项式函数拟合（正常）
 我们先使用与数据生成函数同阶的三阶多项式函数拟合。实验表明，这个模型的训练误差和在测试数据集的误差都较低。训练出的模型参数也接近真实值：w1=1.2,w2=−3.4,w3=5.6,b=5。
-![image_Snipaste_2024-01-29_15-24-28.png](./assets/Snipaste_2024-01-29_15-24-28.png)
+![image_Snipaste_2024-01-29_15-24-28.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-29_15-24-28.png)
 
 
 ```python
@@ -207,20 +206,20 @@ fit_and_plot(poly_features[:n_train, :], poly_features[n_train:, :],
 
 
     ---------------------------------------------------------------------------
-
+    
     NameError                                 Traceback (most recent call last)
-
+    
     Cell In[2], line 1
     ----> 1 fit_and_plot(poly_features[:n_train, :], poly_features[n_train:, :],
           2              labels[:n_train], labels[n_train:])
-    
+
 
     NameError: name 'fit_and_plot' is not defined
 
 
 ## 线性函数拟合（欠拟合）
 我们再试试线性函数拟合。很明显，该模型的训练误差在迭代早期下降后便很难继续降低。在完成最后一次迭代周期后，训练误差依旧很高。线性模型在非线性模型（如三阶多项式函数）生成的数据集上容易欠拟合。
-![image_Snipaste_2024-01-29_15-24-49.png](./assets/Snipaste_2024-01-29_15-24-49.png)
+![image_Snipaste_2024-01-29_15-24-49.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-29_15-24-49.png)
 
 
 ```python
@@ -230,20 +229,20 @@ fit_and_plot(features[:n_train, :], features[n_train:, :], labels[:n_train],
 
 
     ---------------------------------------------------------------------------
-
+    
     NameError                                 Traceback (most recent call last)
-
+    
     Cell In[3], line 1
     ----> 1 fit_and_plot(features[:n_train, :], features[n_train:, :], labels[:n_train],
           2              labels[n_train:])
-    
+
 
     NameError: name 'fit_and_plot' is not defined
 
 
 ##  训练样本不足（过拟合）
 事实上，即便使用与数据生成模型同阶的三阶多项式函数模型，如果训练样本不足，该模型依然容易过拟合。让我们只使用两个样本来训练模型。显然，训练样本过少了，甚至少于模型参数的数量。这使模型显得过于复杂，以至于容易被训练数据中的噪声影响。在迭代过程中，尽管训练误差较低，但是测试数据集上的误差却很高。这是典型的过拟合现象。
-![image_Snipaste_2024-01-29_15-25-29.png](./assets/Snipaste_2024-01-29_15-25-29.png)
+![image_Snipaste_2024-01-29_15-25-29.png](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2024-01-29_15-25-29.png)
 
 
 ```python
@@ -253,13 +252,13 @@ fit_and_plot(poly_features[0:2, :], poly_features[n_train:, :], labels[0:2],
 
 
     ---------------------------------------------------------------------------
-
+    
     NameError                                 Traceback (most recent call last)
-
+    
     Cell In[4], line 1
     ----> 1 fit_and_plot(poly_features[0:2, :], poly_features[n_train:, :], labels[0:2],
           2              labels[n_train:])
-    
+
 
     NameError: name 'fit_and_plot' is not defined
 
