修改本地文件

--- a/2.1. 数据操作.md
+++ b/2.1. 数据操作.md
@@ -158,7 +158,7 @@ print(x.shape)
 
 
 ## 2.1.2. 运算符
-![image-20231204144835021](./assets/Snipaste_2023-12-04_14-49-24.png)
+![image-20231204144835021](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_14-49-24.png)
 
 
 
@@ -192,7 +192,7 @@ print(torch.exp(x))
 
 
 
-![image-2](./assets/Snipaste_2023-12-04_14-54-56.png)
+![image-2](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsSnipaste_2023-12-04_14-54-56.png)
 
 
 ```python
