--- a/1. 初认.md
+++ b/1. 初认.md
@@ -123,13 +123,13 @@ $$
 
 ### 2.5 梯度下降
 
-​	梯度下降是一个用来求函数最小值的算法，我们使用梯度下降算法来求出代价函数![image-20231123114948855](./assets/image-20231123114948855.png) 的最小值。
+​	梯度下降是一个用来求函数最小值的算法，我们使用梯度下降算法来求出代价函数![image-20231123114948855](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231123114948855.png) 的最小值。
 
-​	梯度下降背后的思想是：开始时我们随机选择一个参数的组合![image-20231123115022486](./assets/image-20231123115022486.png)计算代价函数，然后我们寻找下一个能让代价函数值下降最多的参数组合。我们持续这么做直到到到一个局部最小值（**local minimum**），因为我们并没有尝试完所有的参数组合，所以不能确定我们得到的局部最小值是否便是全局最小值（**global minimum**)，选择不同的初始参数组合，可能会找到不同的局部最小值。
+​	梯度下降背后的思想是：开始时我们随机选择一个参数的组合![image-20231123115022486](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231123115022486.png)计算代价函数，然后我们寻找下一个能让代价函数值下降最多的参数组合。我们持续这么做直到到到一个局部最小值（**local minimum**），因为我们并没有尝试完所有的参数组合，所以不能确定我们得到的局部最小值是否便是全局最小值（**global minimum**)，选择不同的初始参数组合，可能会找到不同的局部最小值。
 
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsdb48c81304317847870d486ba5bb2015.jpg)
 
-​	批量梯度下降（**batch gradient descent**）算法的公式为：![image-20231123115224905](./assets/image-20231123115224905.png)
+​	批量梯度下降（**batch gradient descent**）算法的公式为：![image-20231123115224905](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231123115224905.png)
 
 ​	其中是学习率（**learning rate**），它决定了我们沿着能让代价函数下降程度最大的方向向下迈出的步子有多大，在批量梯度下降中，我们每一次都同时让所有的参数减去学习速率乘以代价函数的导数。
 
@@ -154,27 +154,27 @@ $$
 
 ​		**梯度下降可以理解为如何寻找到函数斜率最小的点**，**通过求得函数斜率最小点求出代价函数最小值。注意这里求出的点属于局部最低点。**
 
-​		对于这个问题，求导的目的，基本上可以说取这个红点的切线，就是这样一条红色的直线，刚好与函数相切于这一点，让我们看看这条红色直线的斜率，就是这条刚好与函数曲线相切的这条直线，这条直线的斜率正好是这个三角形的高度除以这个水平长度，现在，这条线有一个正斜率，也就是说它有正导数，因此，我得到的新的![image-20231125195518273](./assets/image-20231125195518273.png)，![image-20231125195523481](./assets/image-20231125195523481.png)更新后等于![image-20231125195540892](./assets/image-20231125195540892.png)减去一个正数乘以![image-20231125195549171](./assets/image-20231125195549171.png)
+​		对于这个问题，求导的目的，基本上可以说取这个红点的切线，就是这样一条红色的直线，刚好与函数相切于这一点，让我们看看这条红色直线的斜率，就是这条刚好与函数曲线相切的这条直线，这条直线的斜率正好是这个三角形的高度除以这个水平长度，现在，这条线有一个正斜率，也就是说它有正导数，因此，我得到的新的![image-20231125195518273](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195518273.png)，![image-20231125195523481](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195523481.png)更新后等于![image-20231125195540892](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195540892.png)减去一个正数乘以![image-20231125195549171](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195549171.png)
 
 ​	这就是梯度下降法的更新规则：![image-20231125195608109](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195608109.png)
 
-​	**如果![image-20231125195631878](./assets/image-20231125195631878.png)太小或![image-20231125195634384](./assets/image-20231125195634384.png)太大会出现什么情况？：**
+​	**如果![image-20231125195631878](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195631878.png)太小或![image-20231125195634384](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195634384.png)太大会出现什么情况？：**
 
-​		**如果![image-20231125195638702](./assets/image-20231125195638702.png)太小了，学习速率太小，结果就是只能一样一点点地挪动，去努力接近最低点，这样就需要很多步才能到达最低点，**所以如果![image-20231125195646739](./assets/image-20231125195646739.png)太小的话，可能会很慢，因为它会一点点挪动，它会需要很多步才能到达全局最低点。
+​		**如果![image-20231125195638702](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195638702.png)太小了，学习速率太小，结果就是只能一样一点点地挪动，去努力接近最低点，这样就需要很多步才能到达最低点，**所以如果![image-20231125195646739](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195646739.png)太小的话，可能会很慢，因为它会一点点挪动，它会需要很多步才能到达全局最低点。
 
-​		**如果![image-20231125195651748](./assets/image-20231125195651748.png)太大，那么梯度下降法可能会越过最低点，甚至可能无法收敛，下一次迭代又移动了一大步，越过一次，又越过一次，一次次越过最低点，直到你发现实际上离最低点越来越远，所以，如果![image-20231125195703095](./assets/image-20231125195703095.png)太大，它会导致无法收敛，甚至发散。**
+​		**如果![image-20231125195651748](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195651748.png)太大，那么梯度下降法可能会越过最低点，甚至可能无法收敛，下一次迭代又移动了一大步，越过一次，又越过一次，一次次越过最低点，直到你发现实际上离最低点越来越远，所以，如果![image-20231125195703095](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195703095.png)太大，它会导致无法收敛，甚至发散。**
 
-​	现在，我还有一个问题，当我第一次学习这个地方时，如果我们预先把![image-20231125195727399](./assets/image-20231125195727399.png)放在一个局部的最低点，你认为下一步梯度下降法会怎样工作？
+​	现在，我还有一个问题，当我第一次学习这个地方时，如果我们预先把![image-20231125195727399](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195727399.png)放在一个局部的最低点，你认为下一步梯度下降法会怎样工作？
 
-​	假设你将![image-20231125195735319](./assets/image-20231125195735319.png)初始化在局部最低点，在这儿，它已经在一个局部的最优处或局部最低点。结果是局部最优点的导数将等于零，因为它是那条切线的斜率。这意味着你已经在局部最优点，它使得![image-20231125195803627](./assets/image-20231125195803627.png)不再改变，也就是新的等于原来的![image-20231125195810284](./assets/image-20231125195810284.png)，因此，如果你的参数已经处于局部最低点，那么梯度下降法更新其实什么都没做，它不会改变参数的值。这也解释了为什么即使学习速率![image-20231125195646739](./assets/image-20231125195646739.png)保持不变时，梯度下降也可以收敛到局部最低点。
+​	假设你将![image-20231125195735319](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195735319.png)初始化在局部最低点，在这儿，它已经在一个局部的最优处或局部最低点。结果是局部最优点的导数将等于零，因为它是那条切线的斜率。这意味着你已经在局部最优点，它使得![image-20231125195803627](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195803627.png)不再改变，也就是新的等于原来的![image-20231125195810284](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195810284.png)，因此，如果你的参数已经处于局部最低点，那么梯度下降法更新其实什么都没做，它不会改变参数的值。这也解释了为什么即使学习速率![image-20231125195646739](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195646739.png)保持不变时，梯度下降也可以收敛到局部最低点。
 
-​	我们来看一个例子，这是代价函数![image-20231125195845198](./assets/image-20231125195845198.png)。
+​	我们来看一个例子，这是代价函数![image-20231125195845198](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195845198.png)。
 
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets4668349e04cf0c4489865e133d112e98.png)
 
-​		在梯度下降法中，当我们接近局部最低点时，梯度下降法会自动采取更小的幅度，这是因为当我们接近局部最低点时，很显然在局部最低时导数等于零，所以当我们接近局部最低时，导数值会自动变得越来越小，所以梯度下降将自动采取较小的幅度，这就是梯度下降的做法。所以实际上没有必要再另外减小![image-20231125195646739](./assets/image-20231125195646739.png)
+​		在梯度下降法中，当我们接近局部最低点时，梯度下降法会自动采取更小的幅度，这是因为当我们接近局部最低点时，很显然在局部最低时导数等于零，所以当我们接近局部最低时，导数值会自动变得越来越小，所以梯度下降将自动采取较小的幅度，这就是梯度下降的做法。所以实际上没有必要再另外减小![image-20231125195646739](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125195646739.png)
 
-​	**梯度下降算法，你可以用它来最小化任何代价函数![image-20231125200003502](./assets/image-20231125200003502.png)，不只是线性回归中的代价函数![image-20231125200006781](./assets/image-20231125200006781.png)。**
+​	**梯度下降算法，你可以用它来最小化任何代价函数![image-20231125200003502](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200003502.png)，不只是线性回归中的代价函数![image-20231125200006781](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200006781.png)。**
 
 ### 2.7 梯度下降的线性回归
 
