--- a/入门课程/6. 神经网络.md
+++ b/入门课程/6. 神经网络.md
@@ -96,30 +96,48 @@
 
 ### 5.1 RBF神经网络
 
-#### 径向基函数
+#### 5.1.1 径向基函数
 
 $$
 径向基函数是取值仅仅依赖于离原点距离的实值函数即φ(x)=φ(∣∣x∣∣)(也可以是离任意点的 \\
 距离,距离一般使用欧式距离[欧式径向基函数],也可以是其他距离函数),任何满足该特性的函 \\
 数都φ都叫做径向基函数,通常定义为空间中任一点x到某一中心c之间区民距离的单调函数 \\
-常见的径向基函数包括(定义r=∣x−c i​∣∣c i​ O称为径向基函数的扩展函数(方差),它反应了函数图像的宽度,σ越小,宽度越窄,函数越具有选择性) \\
-Gauss(高斯)函数:φ(r)=exp(− 2σ 2 r 2 ​ )反演S型函数:φ(r)= 1+exp( σ 2 r 2 ​ 1​) \\
+常见的径向基函数包括(定义r=∣x−c i​∣∣c i​ O称为径向基函数的扩展函数(方差), \\
+它反应了函数图像的宽度,σ越小,宽度越窄,函数越具有选择性) \\
+Gauss(高斯)函数:φ(r)=exp(− 2σ 2 r 2 ​ ) \\
+反演S型函数:φ(r)= 1+exp( σ 2 r 2 ​ 1​) \\
 拟多二次函数:φ(r)= (r 2+σ 2) 21​ 1​
 $$
 
 ![image](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsassetsv2-001abd0f31fdfa9c3d4c62e87e2f7c60_720w.webp)
 
+
+
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-8555687647e71365e5d2cbadea69b048_720w.webp)	
 
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-001abd0f31fdfa9c3d4c62e87e2f7c60_720w.webp)
+
+#### 5.1.2 结构
+
+​	RBF网络是一种三层前向网络，第一层为由信号源节点组成的输入层，第二层为隐层，隐单元数视问题需要而定，隐单元的变换函数为非负非线性的函数RBF（径向基函数），第三层为输出层，输出层是对隐层神经元输出的线性组合
 
 ​	RBF（Radial Basis Function ,径向基函数）网络是一种单隐层前馈神经网络，它是由径向基函数作为隐层神经元激活函数，而输出层则是对隐藏神经元输出的线性组合，假定输入为d维向量x，输出为实值，则RBF网络可表示为
 
 ![image-20240229114900280](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20240229114900280.png)
 
-![image-20240229114932785](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20240229114932785.png)
+![image-20240229143153549](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20240229143153549.png)
+
+
 
 ### 5.2 ART神经网络
 
 ![image-20240229114958749](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20240229114958749.png)
+
+![image-20240229143137062](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20240229143137062.png)
+
+### 5.3 SOM网络
+
+![image-20240229144117477](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20240229144117477.png)
+
+![image-20240229144029768](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20240229144029768.png)
 
