--- a/ai/1. 初认.md
+++ b/ai/1. 初认.md
@@ -87,6 +87,8 @@ $$
 
 ​	代价函数也被称作平方误差函数，有时也被称为平方误差代价函数。我们之所以要求出误差的平方和，是因为误差平方代价函数，对于大多数问题，特别是回归问题，都是一个合理的选择。还有其他的代价函数也能很好地发挥作用，但是平方误差代价函数可能是解决回归问题最常用的手段了。
 
+​	代价函数主要评估预测值与实际值之间的差值，其中m为训练集数量。
+
 
 
 ### 2.3 代价函数的直观理解 l
@@ -97,7 +99,11 @@ $$
 
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets2c9fe871ca411ba557e65ac15d55745d.png)
 
+![image-20240402154201052](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240402154201052.png)
 
+通过上图可以发现函数的误差与损失函数之间的关联性：
+
+​	当函数预测值与实际值差值越大，损失函数的值也就越大。（引出后面的梯度下降算法，通过减少损失值的值，从而实现对原函数参数进行更新）
 
 ### 2.4 代价函数的直观理解 II
 
