--- a/ai/专业词解释.md
+++ b/ai/专业词解释.md
@@ -27,3 +27,31 @@
 ## 3. 析取范式（disjunctive normal form (DNF)）
 
 ​	任何命题公式，最终都能够化成（A1 ^ A2）V（A3 ^ A4）的形式，这种先^合取再V析取的范式，被称为“析取范式”。
+
+## 4. 独热编码（one‐hot encoding）
+
+​	独热编码是一个向量，它的分量和类别一样多。类别对应的分量设置为1，其他所有分量设置为0。举例:
+
+​	假设我们现在需要进行分类的类别为[‘猫’,‘狗’,'鸡']那么对于标签向量应该为一个三维向量，其中(1, 0, 0)对应于 “猫”、(0, 1, 0)对应于“鸡”、(0, 0, 1)对应于“狗”： y ∈ {(1, 0, 0),(0, 1, 0),(0, 0, 1)}
+
+## 5. 校准（calibration）
+
+​	为了确保输出非负,且最终输出的概率值总和为1，对每个未规范化的预测求幂，每个求幂后的结果除以它们的总和。
+
+​	![image-20240411165010239](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240411165010239.png)
+
+​	这里，对于所有的j总有0 ≤ yˆj ≤ 1。因此，yˆ可以视为一个正确的概率分布。
+
+## 6. 对数似然
+
+​	softmax函数给出了一个向量yˆ，我们可以将其视为“对给定任意输入x的每个类的条件概率”。例如，yˆ1=P(y = 猫 | x)。假设整个数据集{X, Y}具有n个样本，其中索引i的样本由特征向量x (i)和独热标签向量y (i)组成。我们 可以将估计值与实际值进行比较：
+
+![image-20240411170525618](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240411170525618.png)
+
+​	根据最大似然估计，我们最大化P(Y | X)，相当于最小化负对数似然：
+
+![image-20240411170537857](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240411170537857.png)
+
+​	其中，对于任何标签y和模型预测yˆ，损失函数为：
+
+![image-20240411170549569](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240411170549569.png)
