--- a/ai/专业词解释.md
+++ b/ai/专业词解释.md
@@ -17,8 +17,6 @@
 
 ​	**理解：**以表1.1为例，负类样本相当于在假设空间中，与表1.1与正例不一致的假设、和（或）与反例一致的假设（即与表1.1不吻合的假设）数据集，正类样本即是表1.1中的数据集。版本空间是边界GB和边界SB之间围成的区域。
 
-
-
 ## 2. 合取范式（ conjunctive normal form (CNF)）
 
 ​	任何命题公式，最终都能够化成 （A1 V A2）^（A3 V A4）的这种形式，这种先V析解再^ 合取的范式，被称为“合取范式”。
@@ -55,3 +53,14 @@
 ​	其中，对于任何标签y和模型预测yˆ，损失函数为：
 
 ![image-20240411170549569](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240411170549569.png)
+
+## 7. 分母或规范化常数(配分函数)
+
+​	在[物理学](https://en.wikipedia.org/wiki/Physics)中，**配分函数**描述了[热力学平衡](https://en.wikipedia.org/wiki/Thermodynamic_equilibrium)系统的[统计](https://en.wikipedia.org/wiki/Statistics)特性。[*[需要引用](https://en.wikipedia.org/wiki/Wikipedia:Citation_needed)*] 配分函数是热力学[状态变量的](https://en.wikipedia.org/wiki/State_function)[函数](https://en.wikipedia.org/wiki/Function_(mathematics))，例如[温度](https://en.wikipedia.org/wiki/Temperature)和[体积](https://en.wikipedia.org/wiki/Volume)。系统的大多数聚合[热力学](https://en.wikipedia.org/wiki/Thermodynamics)变量，例如[总能量](https://en.wikipedia.org/wiki/Energy)、[自由能](https://en.wikipedia.org/wiki/Thermodynamic_free_energy)、[熵](https://en.wikipedia.org/wiki/Entropy)和[压力](https://en.wikipedia.org/wiki/Pressure)，都可以用配分函数或其[导数](https://en.wikipedia.org/wiki/Derivative)来表示。配分函数是无量纲的。
+
+每个配分函数被构造为代表一个特定的[统计集合](https://en.wikipedia.org/wiki/Statistical_ensemble)（反过来，对应于一个特定的[自由能](https://en.wikipedia.org/wiki/Thermodynamic_free_energy)）。最常见的统计集成有命名的配分函数。正**则配分函数**适用于[正则系综](https://en.wikipedia.org/wiki/Canonical_ensemble)，其中允许系统在固定温度、体积和[粒子数量](https://en.wikipedia.org/wiki/Number_of_particles)下与[环境进行](https://en.wikipedia.org/wiki/Environment_(systems))[热](https://en.wikipedia.org/wiki/Heat)交换。**大正则配分函数**适用于[大正则系综](https://en.wikipedia.org/wiki/Grand_canonical_ensemble)，其中系统可以在固定的温度、体积和[化学势](https://en.wikipedia.org/wiki/Chemical_potential)下与环境交换热量和粒子。针对不同情况可以定义其他类型的配分函数；有关概括，请参阅[配分函数（数学）](https://en.wikipedia.org/wiki/Partition_function_(mathematics)) 。配分函数有许多物理意义，如[意义和意义](https://en.wikipedia.org/wiki/Partition_function_(statistical_mechanics)#Meaning_and_significance)中所讨论的。
+
+​	[概率论](https://en.wikipedia.org/wiki/Probability_theory)、[信息论](https://en.wikipedia.org/wiki/Information_theory)和[动力系统](https://en.wikipedia.org/wiki/Dynamical_systems)中使用的**配分函数**或构**型积分是**[统计力学中配分函数](https://en.wikipedia.org/wiki/Partition_function_in_statistical_mechanics)定义的推广。对于[玻尔兹曼分布](https://en.wikipedia.org/wiki/Boltzmann_distribution)，它是概率论中[归一化常数](https://en.wikipedia.org/wiki/Normalizing_constant)的特例。配分函数出现在概率论的许多问题中，因为在存在自然对称性的情况下，其相关的[概率测度](https://en.wikipedia.org/wiki/Probability_measure)（[吉布斯测度](https://en.wikipedia.org/wiki/Gibbs_measure)）具有[马尔可夫性质](https://en.wikipedia.org/wiki/Markov_property)。这意味着配分函数不仅出现在具有平移对称性的物理系统中，而且还出现在神经网络（[Hopfield 网络](https://en.wikipedia.org/wiki/Hopfield_network)）等各种设置中，以及使用[马尔可夫](https://en.wikipedia.org/wiki/Markov_logic_network)[网络的](https://en.wikipedia.org/wiki/Markov_network)[基因组学](https://en.wikipedia.org/wiki/Genomics)、[语料库语言学](https://en.wikipedia.org/wiki/Corpus_linguistics)和[人工智能](https://en.wikipedia.org/wiki/Artificial_intelligence)等应用中。[逻辑网络](https://en.wikipedia.org/wiki/Markov_logic_network)。吉布斯测度也是唯一的测度，具有在能量的固定期望值下最大化[熵的特性；这是](https://en.wikipedia.org/wiki/Entropy_(general_concept))[最大熵方法](https://en.wikipedia.org/wiki/Maximum_entropy_method)中配分函数及其派生算法出现的基础。
+
+
+
